--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -7,11 +7,6 @@
   min-height: 2604px;
 }
 
-.u-section-1 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
 .u-section-1 .u-text-1 {
   margin: 28px auto 0;
 }
@@ -50,27 +45,27 @@
   margin: 31px 0 0;
 }
 
-.u-section-1 .u-btn-2 {
+.u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   margin: 42px auto 0;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   margin: 12px auto 0;
   padding: 10px 41px;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   margin: 12px auto 0;
   padding: 10px 50px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 12px auto 0;
@@ -81,21 +76,21 @@
   margin: 161px auto 0;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-7 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-8 {
+.u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 29px;
@@ -104,7 +99,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2587px;
+    min-height: 2628px;
   }
 
   .u-section-1 .u-text-2 {
@@ -112,7 +107,11 @@
   }
 
   .u-section-1 .u-image-3 {
-    margin-left: auto;
+    margin-left: 20px;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-right: 20px;
   }
 
   .u-section-1 .u-text-3 {
@@ -121,290 +120,212 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
+    margin-top: 186px;
   }
 
-  .u-section-1 .u-btn-8 {
+  .u-section-1 .u-btn-7 {
     margin-bottom: 28px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1780px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin: 0 auto;
-    padding: 10px 90px;
+    min-height: 2750px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 0;
   }
 
   .u-section-1 .u-image-1 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
+    margin-top: 28px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-2 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-3 {
-    margin-top: 0;
+    width: 544px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-4 {
-    margin-top: 0;
+    width: 655px;
+    margin-top: 16px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 0;
+    margin-top: 28px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    align-self: center;
+    margin-top: 45px;
   }
 
   .u-section-1 .u-btn-2 {
     align-self: center;
-    margin-top: 0;
+    margin-top: 8px;
   }
 
   .u-section-1 .u-btn-3 {
-    align-self: center;
-    margin-top: 0;
+    margin-top: 8px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: 0;
+    align-self: center;
+    margin-top: 8px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 81px;
   }
 
   .u-section-1 .u-btn-5 {
     align-self: center;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: 0;
   }
 
   .u-section-1 .u-btn-6 {
     align-self: center;
+    margin-top: 8px;
   }
 
   .u-section-1 .u-btn-7 {
-    align-self: center;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 8px;
+    margin-bottom: 46px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1578px;
+    min-height: 2527px;
   }
 
   .u-section-1 .u-text-1 {
+    margin-top: 29px;
     margin-left: 50px;
     margin-right: 50px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-left: 93px;
-  }
-
   .u-section-1 .u-image-1 {
-    width: 540px;
     height: 304px;
+    object-position: 96.92% 50%;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-2 {
-    width: 540px;
-    height: 304px;
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-3 {
+    height: 290px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    margin-right: 100px;
+    height: 238px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-btn-3 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-bottom: 29px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1153px;
+    min-height: 2337px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-left: 33px;
-    margin-right: 33px;
+    margin-top: 28px;
+    margin-left: 27px;
+    margin-right: 27px;
   }
 
   .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 193px;
+    width: 343px;
+    margin-left: -2px;
+    margin-right: -2px;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 193px;
+    width: 342px;
+    margin-top: 9px;
     margin-left: -1px;
     margin-right: -1px;
   }
 
-  .u-section-1 .u-image-1 {
-    height: 191px;
-    width: 340px;
-    margin-right: -2px;
-    margin-left: 2px;
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 191px;
-    width: 340px;
-    margin-right: -2px;
-    margin-left: 2px;
-  }
-
   .u-section-1 .u-image-3 {
-    height: 221px;
-    width: 340px;
-    margin-right: -2px;
-    margin-left: 2px;
+    height: 140px;
+    margin-top: 9px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
-    height: 223px;
-    width: 340px;
-    margin-right: -2px;
-    margin-left: 2px;
+    height: 150px;
+    margin-top: 9px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-right: -2px;
-    margin-left: 2px;
+  .u-section-1 .u-btn-1 {
+    margin-left: -84px;
+    margin-right: -84px;
+    padding: 10px 30px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-right: 0;
-    padding: 10px 16px;
+    margin-left: -84px;
+    margin-right: -84px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -84px;
+    margin-right: -84px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-left: -14px;
+    margin-right: -14px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-left: 103px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-left: 61px;
+    margin-top: 137px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 61px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-left: 61px;
-  }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 567px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 0 60px;
-}
-
-.u-section-2 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-4 {
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 76px;
-    margin-bottom: 0;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin: 26px auto 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin: 12px auto 0;
-    padding: 10px 41px;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin: 12px auto 0;
-    padding: 10px 50px;
-  }
-
-  .u-section-2 .u-btn-4 {
-    margin: 12px auto 41px;
-    padding: 10px 53px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 71px;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin-top: 31px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-btn-1 {
-    margin-left: -61px;
-    margin-right: -61px;
-    padding: 10px 7px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: -61px;
-    margin-right: -61px;
-    padding-left: 18px;
-    padding-right: 18px;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin-left: -61px;
-    margin-right: -61px;
-    padding-left: 27px;
-    padding-right: 27px;
-  }
-
-  .u-section-2 .u-btn-4 {
-    margin-left: -46px;
-    margin-right: -46px;
-    padding-right: 86px;
-    padding-left: 85px;
+    margin-bottom: 11px;
   }
 }
