--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -647,7 +647,7 @@
     margin-left: -519px;
   }
 } .u-section-2 {
-  background-image: url("images/img19_1920x1200.jpg");
+  background-image: url("images/img4.jpg");
   background-position: 50% 50%;
 }
 
