--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -227,201 +227,221 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5349px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 0;
+    min-height: 6912px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
+    margin-top: 32px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-2 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-3 {
-    width: 720px;
     height: 404px;
-    margin-top: 0;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    width: 720px;
     height: 406px;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 0;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 0;
+    align-self: center;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 0;
+    margin-top: 120px;
   }
 
   .u-section-1 .u-image-5 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
+    margin-top: 27px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-6 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-7 {
     height: 405px;
-    width: 720px;
-    margin-top: 0;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-text-5 {
-    margin-top: 0;
-    margin-left: -158px;
+    margin-left: -79px;
+    margin-right: -79px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 0;
+    align-self: center;
   }
 
   .u-section-1 .u-text-6 {
-    margin-top: 0;
-    margin-right: 216px;
-    margin-left: 233px;
+    margin-top: 120px;
   }
 
   .u-section-1 .u-image-8 {
-    width: 720px;
     height: 404px;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-image-9 {
-    width: 720px;
-    height: 404px;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-image-10 {
-    width: 720px;
-    height: 404px;
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-text-7 {
-    margin-top: 0;
-    margin-right: 0;
-    margin-left: -4px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-text-8 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 4238px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: 44px;
-    margin-right: 44px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-image-2 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-image-3 {
-    width: 540px;
-    height: 303px;
-  }
-
-  .u-section-1 .u-image-4 {
-    width: 540px;
-    height: 305px;
-  }
-
-  .u-section-1 .u-image-5 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-image-6 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-image-7 {
-    height: 304px;
-    width: 540px;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-right: 162px;
-    margin-left: 175px;
-  }
-
-  .u-section-1 .u-image-8 {
-    height: 303px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-image-9 {
-    width: 540px;
-    height: 303px;
+    height: 404px;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-10 {
-    width: 540px;
+    height: 404px;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-btn-3 {
+    align-self: center;
+    margin-top: 45px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 45px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    align-self: center;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-btn-5 {
+    align-self: center;
+    margin-top: 9px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 9px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 6059px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .u-section-1 .u-image-1 {
     height: 303px;
+    width: 538px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 302px;
+    width: 538px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-image-3 {
+    height: 290px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-4 {
+    height: 300px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-5 {
+    height: 304px;
+    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-6 {
+    height: 304px;
+    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-7 {
+    height: 304px;
+    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-8 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-9 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-10 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-text-7 {
     margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -431,8 +451,8 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-left: 29px;
-    margin-right: 29px;
+    margin-left: 33px;
+    margin-right: 33px;
   }
 
   .u-section-1 .u-text-2 {
@@ -441,37 +461,51 @@
   }
 
   .u-section-1 .u-image-1 {
-    width: 340px;
     height: 191px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-2 {
-    width: 340px;
     height: 191px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-3 {
-    width: 340px;
-    height: 191px;
+    height: 182px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
-    width: 340px;
-    height: 192px;
+    object-position: 0% 50%;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: -84px;
+    margin-right: -84px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-5 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-1 .u-image-6 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-1 .u-image-7 {
@@ -479,100 +513,44 @@
     width: 340px;
   }
 
+  .u-section-1 .u-text-5 {
+    margin-left: -79px;
+    margin-right: -79px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: -82px;
+    margin-right: -82px;
+  }
+
   .u-section-1 .u-text-6 {
-    margin-right: 102px;
-    margin-left: 110px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-8 {
     height: 191px;
     width: 100%;
-    margin-right: auto;
-    margin-left: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-9 {
     height: 191px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-image-10 {
     height: 191px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: -1px;
-    margin-right: -1px;
-  }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 592px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 0 60px;
-}
-
-.u-section-2 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-}
-
-.u-section-2 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 114px;
-    margin-bottom: 0;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin: 29px auto 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin: 11px auto 0;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin: 11px auto 60px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-btn-1 {
-    margin-left: -84px;
-    margin-right: -84px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: -72px;
-    margin-right: -72px;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin-left: -82px;
-    margin-right: -82px;
+    margin-left: -71px;
+    margin-right: -71px;
   }
 }
