--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -217,58 +217,69 @@
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-2 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-3 {
     width: 720px;
     height: 404px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-4 {
     width: 720px;
     height: 404px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-5 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-6 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: 86px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: 40px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 400px;
+    margin-left: 43px;
+    margin-right: 43px;
   }
 
   .u-section-1 .u-image-7 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-8 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-9 {
     width: 720px;
     height: 415px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -307,14 +318,6 @@
     height: 304px;
   }
 
-  .u-section-1 .u-btn-1 {
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: auto;
-  }
-
   .u-section-1 .u-image-7 {
     width: 540px;
     height: 304px;
@@ -329,11 +332,21 @@
     width: 540px;
     height: 311px;
   }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: -1px;
+    margin-right: -1px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2342px;
+    min-height: 4577px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
@@ -366,9 +379,29 @@
     height: 191px;
   }
 
+  .u-section-1 .u-text-3 {
+    width: 254px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-btn-1 {
-    margin-left: -4px;
-    margin-right: -4px;
+    margin-left: -72px;
+    margin-right: -72px;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: -72px;
+    margin-right: -72px;
+    padding-right: 37px;
+    padding-left: 36px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-7 {
@@ -385,72 +418,11 @@
     width: 340px;
     height: 196px;
   }
-} .u-section-2 {
-  background-image: none;
-}
 
-.u-section-2 .u-sheet-1 {
-  min-height: 617px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 0 60px;
-}
-
-.u-section-2 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-}
-
-.u-section-2 .u-btn-3 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin: 114px -2px 0;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin: 98px auto 0;
-    padding: 10px 11px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin: 15px auto 0;
-    padding: 10px 22px;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin: -165px auto 120px;
-    padding: 10px 5px 10px 4px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-btn-1 {
-    margin-left: -58px;
-    margin-right: -58px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: -58px;
-    margin-right: -58px;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin-left: -58px;
-    margin-right: -58px;
+  .u-section-1 .u-btn-3 {
+    margin-left: -69px;
+    margin-right: -69px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
