--- a/Windows-8-0-сборки.css
+++ b/Windows-8-0-сборки.css
@@ -47,13 +47,13 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 26px auto 0;
+  margin: 26px auto 0 0;
 }
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 47px auto 0;
+  margin: 47px auto 0 179px;
 }
 
 .u-section-1 .u-btn-2 {
@@ -119,12 +119,10 @@
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-left: 69px;
-    margin-right: 69px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 273px;
+    margin-left: 204px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -152,72 +150,86 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3256px;
+    min-height: 3415px;
   }
 
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-2 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-3 {
-    width: 720px;
     height: 405px;
+    margin-top: 21px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    width: 720px;
     height: 405px;
     margin-top: 20px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-5 {
-    width: 720px;
     height: 404px;
+    margin-top: 21px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 0;
+    margin-top: 21px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 71px;
-    align-self: center;
+    margin-left: 103px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 402px;
-    align-self: center;
+    margin-left: auto;
   }
 
   .u-section-1 .u-text-4 {
     margin-top: 178px;
-    margin-left: 328px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 167px;
-    align-self: center;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 167px;
-    align-self: center;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 167px;
+    margin-left: auto;
+    margin-bottom: 47px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3263px;
+    min-height: 2967px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-1 .u-image-1 {
@@ -231,63 +243,62 @@
   }
 
   .u-section-1 .u-image-3 {
-    width: 540px;
     height: 304px;
-    margin-top: 337px;
+    width: 540px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-image-4 {
-    width: 540px;
     height: 304px;
-    margin-top: -622px;
+    width: 540px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-image-5 {
-    width: 540px;
     height: 304px;
-    margin-top: 1309px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-right: 0;
+    width: 540px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 35px;
-    margin-left: 0;
+    align-self: center;
+    margin-left: 30px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 15px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: 96px;
-    margin-left: 246px;
+    align-self: center;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 0;
+    align-self: center;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 0;
+    align-self: center;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 0;
-    margin-bottom: 40px;
+    margin-bottom: 29px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2763px;
+    min-height: 2478px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 31px;
+    margin-top: 28px;
+    margin-left: 29px;
+    margin-right: 29px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
@@ -301,86 +312,47 @@
   }
 
   .u-section-1 .u-image-3 {
-    width: 340px;
     height: 191px;
-    margin-top: 225px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-4 {
-    width: 340px;
     height: 191px;
-    margin-top: -397px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-5 {
-    width: 340px;
     height: 191px;
-    margin-top: 1196px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 28px;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 45px;
+    margin-left: -53px;
+    margin-right: -53px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 17px;
+    margin-left: -53px;
+    margin-right: -53px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 99px;
-    margin-left: 155px;
+    margin-top: 123px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-bottom: 31px;
-  }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 500px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 0 60px;
-}
-
-.u-section-2 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 114px;
-    margin-bottom: 0;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin: 31px auto 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin: 9px auto 49px;
-    padding: 10px 41px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-btn-1 {
-    margin-left: -53px;
-    margin-right: -53px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: -53px;
-    margin-right: -53px;
+    margin-bottom: 28px;
   }
 }
