--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -101,40 +101,40 @@
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-2 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-3 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-4 {
     width: 720px;
     height: 405px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-3 {
-    margin-right: 0;
     margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: 65px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 408px;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2929px;
+    min-height: 2635px;
   }
 
   .u-section-1 .u-image-1 {
@@ -158,23 +158,33 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: auto;
+    align-self: center;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: auto;
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-3 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-4 {
+    align-self: center;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-bottom: 28px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2658px;
+    min-height: 2310px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-left: 29px;
-    margin-right: 29px;
   }
 
   .u-section-1 .u-text-2 {
@@ -185,82 +195,35 @@
 
   .u-section-1 .u-image-1 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-1 .u-image-2 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-1 .u-image-3 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 500px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 0 60px;
-}
-
-.u-section-2 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 114px;
-    margin-bottom: 0;
+    width: 340px;
   }
 
-  .u-section-2 .u-btn-1 {
-    margin: 31px auto 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin: 9px auto 49px;
-    padding: 10px 41px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-btn-1 {
+  .u-section-1 .u-btn-1 {
     margin-left: -64px;
     margin-right: -64px;
   }
 
-  .u-section-2 .u-btn-2 {
+  .u-section-1 .u-btn-2 {
     margin-left: -64px;
     margin-right: -64px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
   }
 }
