--- a/Windows-Lite-x32-Сборки.css
+++ b/Windows-Lite-x32-Сборки.css
@@ -137,134 +137,113 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2380px;
+    min-height: 3461px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 0;
-    margin-left: 210px;
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 0;
-    margin-left: 387px;
+    width: auto;
   }
 
   .u-section-1 .u-image-1 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
-    margin-left: 290px;
+    margin-top: 28px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-2 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
-    margin-left: 290px;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-3 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
-    margin-left: 290px;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-4 {
-    width: 720px;
     height: 405px;
-    margin-top: 0;
-    margin-left: 290px;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-5 {
-    margin-top: 0;
-    margin-left: 290px;
+    margin-top: 12px;
   }
 
   .u-section-1 .u-image-6 {
-    margin-top: 0;
-    margin-left: 290px;
+    margin-top: 12px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 0;
-    margin-left: 210px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 0;
-    margin-left: 402px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 0;
-    margin-left: 447px;
+    margin-top: 10px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 0;
-    margin-left: 504px;
+    margin-top: 67px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-bottom: 0;
-    margin-left: 446px;
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1976px;
+    min-height: 3132px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-left: 300px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 540px;
     height: 304px;
-    margin-left: 300px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-2 {
-    width: 560px;
-    height: 315px;
-    margin-right: 280px;
-    margin-left: auto;
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-3 {
-    width: 540px;
     height: 304px;
-    margin-left: 300px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
-    width: 540px;
-    height: 304px;
-    margin-left: 300px;
-  }
-
-  .u-section-1 .u-image-5 {
-    margin-left: 300px;
-  }
-
-  .u-section-1 .u-image-6 {
-    width: 560px;
-    height: 314px;
-    margin-right: 280px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-left: 300px;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-left: 503px;
+    height: 305px;
+    width: 542px;
+    margin-left: -1px;
+    margin-right: -1px;
   }
 }
 
@@ -274,40 +253,36 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-right: 350px;
-    margin-left: 400px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 400px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .u-section-1 .u-image-1 {
     height: 191px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-image-2 {
     height: 191px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-image-3 {
     height: 191px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-5 {
@@ -325,59 +300,17 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: 400px;
-  }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 500px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 0 60px;
-}
-
-.u-section-2 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-}
-
-.u-section-2 .u-btn-2 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 114px;
-    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .u-section-2 .u-btn-1 {
-    margin: 31px auto 0;
+  .u-section-1 .u-btn-1 {
+    margin-left: -69px;
+    margin-right: -69px;
   }
 
-  .u-section-2 .u-btn-2 {
-    margin: 9px auto 49px;
-    padding: 10px 38px 10px 37px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-btn-1 {
-    margin-left: -65px;
-    margin-right: -65px;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: -65px;
-    margin-right: -65px;
+  .u-section-1 .u-btn-2 {
+    margin-left: -69px;
+    margin-right: -69px;
   }
 }
