--- a/Содержимое-сборок.css
+++ b/Содержимое-сборок.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3404px;
+  min-height: 3468px;
 }
 
 .u-section-1 .u-image-1 {
@@ -19,7 +19,7 @@
 
 .u-section-1 .u-image-2 {
   width: 398px;
-  height: 317px;
+  height: 376px;
   margin: 192px auto 0 81px;
 }
 
@@ -82,56 +82,62 @@
 }
 
 .u-section-1 .u-image-7 {
-  width: 408px;
-  height: 351px;
+  width: 371px;
+  height: 352px;
   margin: 16px auto 0 88px;
 }
 
 .u-section-1 .u-image-8 {
   width: 302px;
   height: 80px;
-  margin: -351px auto 0 462px;
+  margin: -318px auto 0 462px;
 }
 
 .u-section-1 .u-image-9 {
-  width: 625px;
-  height: 66px;
-  margin: -1px auto 0 462px;
+  width: 227px;
+  height: 164px;
+  margin: -1px 451px 0 auto;
 }
 
 .u-section-1 .u-image-10 {
-  width: 624px;
-  height: 66px;
-  margin: -1px auto 0 463px;
+  width: 303px;
+  height: 177px;
+  margin: -170px 136px 0 auto;
 }
 
 .u-section-1 .u-image-11 {
-  width: 625px;
-  height: 55px;
-  margin: -1px auto 0 462px;
+  width: 302px;
+  height: 145px;
+  margin: -17px 376px 0 auto;
 }
 
 .u-section-1 .u-image-12 {
-  width: 243px;
-  height: 126px;
-  margin: -1px auto 0 463px;
+  width: 270px;
+  height: 189px;
+  margin: -134px 106px 0 auto;
 }
 
 .u-section-1 .u-image-13 {
   width: 249px;
   height: 203px;
-  margin: -126px auto 0 705px;
+  margin: -64px auto 0 440px;
 }
 
 .u-section-1 .u-image-14 {
-  width: 270px;
-  height: 189px;
-  margin: -78px auto 40px 463px;
+  width: 243px;
+  height: 126px;
+  margin: -153px 136px 0 auto;
+}
+
+.u-section-1 .u-image-15 {
+  width: 419px;
+  height: 203px;
+  margin: -209px auto 49px 40px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3894px;
+    min-height: 4124px;
   }
 
   .u-section-1 .u-image-1 {
@@ -214,43 +220,57 @@
   }
 
   .u-section-1 .u-image-7 {
-    margin-top: 279px;
-    margin-left: 30px;
+    margin-top: 96px;
+    margin-left: 22px;
   }
 
   .u-section-1 .u-image-8 {
-    margin-top: -614px;
+    margin-top: -431px;
     margin-left: 436px;
   }
 
   .u-section-1 .u-image-9 {
-    margin-left: 289px;
+    margin-top: 357px;
+    margin-right: auto;
+    margin-left: 295px;
   }
 
   .u-section-1 .u-image-10 {
-    margin-left: 290px;
+    margin-top: -529px;
+    margin-right: 81px;
   }
 
   .u-section-1 .u-image-11 {
-    margin-left: 289px;
+    margin-top: 16px;
+    margin-right: auto;
+    margin-left: 301px;
   }
 
   .u-section-1 .u-image-12 {
-    margin-left: 437px;
+    margin-top: 62px;
+    margin-right: 69px;
   }
 
   .u-section-1 .u-image-13 {
-    margin-left: 665px;
+    margin-top: -396px;
+    margin-right: 88px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-14 {
-    margin-left: 437px;
+    margin-top: 199px;
+    margin-right: 180px;
+  }
+
+  .u-section-1 .u-image-15 {
+    margin-top: -164px;
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4021px;
+    min-height: 4194px;
   }
 
   .u-section-1 .u-text-2 {
@@ -306,47 +326,76 @@
   }
 
   .u-section-1 .u-image-7 {
-    margin-top: 280px;
-    margin-left: 16px;
+    margin-top: 25px;
+    margin-left: 13px;
   }
 
   .u-section-1 .u-image-8 {
-    margin-top: -615px;
+    margin-top: -360px;
     margin-left: 392px;
   }
 
   .u-section-1 .u-image-9 {
+    width: 291px;
+    height: 207px;
+    margin-top: 314px;
     margin-left: 69px;
   }
 
   .u-section-1 .u-image-10 {
-    margin-left: 70px;
+    height: 176px;
+    margin-top: -505px;
+    margin-right: 34px;
   }
 
   .u-section-1 .u-image-11 {
-    margin-left: 69px;
+    margin-top: 254px;
+    margin-right: 58px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-12 {
+    margin-top: 701px;
+    margin-right: 27px;
   }
 
   .u-section-1 .u-image-13 {
     width: 270px;
-    margin-right: 27px;
-    margin-left: auto;
+    margin-top: -1278px;
+    margin-right: 62px;
   }
 
   .u-section-1 .u-image-14 {
-    margin: 0 27px 60px auto;
+    margin-top: 277px;
+    margin-right: 136px;
+    margin-left: 437px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4808px;
+    min-height: 5470px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 7px;
+    margin-right: 7px;
   }
 
   .u-section-1 .u-text-3 {
     width: 423px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-5 {
@@ -364,6 +413,8 @@
 
   .u-section-1 .u-text-7 {
     margin-top: 100px;
+    margin-left: 3px;
+    margin-right: 3px;
   }
 
   .u-section-1 .u-image-5 {
@@ -381,67 +432,69 @@
   .u-section-1 .u-text-8 {
     width: auto;
     margin-top: 527px;
-    margin-right: 144px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-7 {
-    margin-top: 212px;
+    margin-top: 27px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-8 {
-    margin-top: 6px;
-    margin-left: 15px;
+    margin-top: 209px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-9 {
-    height: 57px;
-    margin-top: -624px;
+    margin-top: 193px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-image-10 {
-    height: 57px;
-    margin-top: 6px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-image-11 {
-    height: 48px;
+    height: 306px;
     margin-top: 7px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
+  .u-section-1 .u-image-11 {
+    height: 246px;
+    margin-top: -723px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
   .u-section-1 .u-image-12 {
-    width: 192px;
-    height: 106px;
-    margin-top: 369px;
-    margin-right: 32px;
-    margin-left: auto;
+    margin-top: -523px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-image-13 {
-    margin-top: -20px;
-    margin-right: auto;
-    margin-left: 0;
+    margin-top: 882px;
+    margin-right: 27px;
   }
 
   .u-section-1 .u-image-14 {
-    margin-top: -152px;
-    margin-right: 0;
+    width: 192px;
+    height: 106px;
+    margin-top: -174px;
+    margin-right: auto;
+    margin-left: 33px;
+  }
+
+  .u-section-1 .u-image-15 {
+    margin-top: -709px;
+    margin-left: 36px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4640px;
+    min-height: 5334px;
   }
 
   .u-section-1 .u-image-1 {
@@ -509,32 +562,29 @@
 
   .u-section-1 .u-text-8 {
     margin-top: 491px;
-    margin-right: auto;
   }
 
   .u-section-1 .u-image-7 {
-    height: 292px;
-    margin-top: 0;
+    height: 328px;
+    margin-top: 7px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-image-8 {
-    margin-top: 213px;
-    margin-left: auto;
+    margin-top: 170px;
   }
 
   .u-section-1 .u-image-9 {
-    height: 36px;
-    margin-top: -293px;
+    margin-top: -245px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-image-10 {
-    height: 36px;
+    height: 202px;
     margin-top: 0;
     width: auto;
     margin-right: initial;
@@ -542,26 +592,41 @@
   }
 
   .u-section-1 .u-image-11 {
-    height: 36px;
-    margin-top: 0;
+    height: 149px;
+    margin-top: 13px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-image-12 {
-    margin-top: 0;
-    margin-right: auto;
+    height: 238px;
+    margin-top: 374px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-13 {
-    margin-top: 78px;
-    margin-left: auto;
+    width: 233px;
+    height: 190px;
+    margin-top: -435px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-image-14 {
-    margin-top: 0;
-    margin-right: auto;
-    margin-bottom: 42px;
+    width: 326px;
+    height: 161px;
+    margin-top: -360px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-15 {
+    height: 165px;
+    margin-top: 444px;
+    margin-bottom: 24px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 }
