--- a/Старые-версии-Windows.css
+++ b/Старые-версии-Windows.css
@@ -449,22 +449,191 @@
   .u-section-1 .u-btn-15 {
     margin-left: 0;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 500px;
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 1151px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 0 0 60px;
+  width: auto;
+  margin: 62px auto 0;
 }
 
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-1 {
-    width: auto;
+.u-section-2 .u-btn-1 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-3 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-4 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-5 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-6 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-7 {
+  background-image: none;
+}
+
+.u-section-2 .u-text-2 {
+  width: auto;
+  margin: 22px 299px 0 auto;
+}
+
+.u-section-2 .u-btn-8 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-9 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-10 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-11 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-12 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-13 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-14 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-15 {
+  background-image: none;
+}
+
+.u-section-2 .u-btn-16 {
+  background-image: none;
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-btn-1 {
+    margin: 12px auto 0;
+    padding: 10px 84px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin: 12px auto 0;
+    padding: 10px 76px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin: 12px auto 0;
+    padding: 10px 33px;
+  }
+
+  .u-section-2 .u-btn-4 {
+    margin: 12px auto 0;
+    padding: 10px 67px 10px 65px;
+  }
+
+  .u-section-2 .u-btn-5 {
+    margin: 12px auto 0;
+    padding: 10px 41px 10px 39px;
+  }
+
+  .u-section-2 .u-btn-6 {
+    margin: 12px auto 0;
+    padding: 10px 75px 10px 74px;
+  }
+
+  .u-section-2 .u-btn-7 {
+    margin: 12px auto 0;
+    padding: 10px 83px 10px 81px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 43px;
+    margin-right: auto;
+  }
+
+  .u-section-2 .u-btn-8 {
+    margin: 12px auto 0;
+    padding: 10px 84px;
+  }
+
+  .u-section-2 .u-btn-9 {
+    margin: 12px auto 0;
+    padding: 10px 91px 10px 90px;
+  }
+
+  .u-section-2 .u-btn-10 {
+    margin: 12px auto 0;
+    padding: 10px 76px;
+  }
+
+  .u-section-2 .u-btn-11 {
+    margin: 12px auto 0;
+    padding: 10px 33px;
+  }
+
+  .u-section-2 .u-btn-12 {
+    margin: 12px auto 0;
+    padding: 10px 67px 10px 65px;
+  }
+
+  .u-section-2 .u-btn-13 {
+    margin: 12px auto 0;
+    padding: 10px 41px 10px 39px;
+  }
+
+  .u-section-2 .u-btn-14 {
+    margin: 12px auto 0;
+    padding: 10px 75px 10px 74px;
+  }
+
+  .u-section-2 .u-btn-15 {
+    margin: 12px auto 0 354px;
+    padding: 10px 35px 10px 33px;
+  }
+
+  .u-section-2 .u-btn-16 {
+    margin: -45px auto 60px 224px;
+    padding: 10px 24px 10px 22px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-1 {
-    margin-top: 60px;
+  .u-section-2 .u-btn-15 {
+    margin-left: 264px;
+  }
+
+  .u-section-2 .u-btn-16 {
+    margin-left: 134px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-btn-15 {
+    margin-left: 34px;
+  }
+
+  .u-section-2 .u-btn-16 {
+    margin-left: 186px;
   }
 }
